<resources>
    <string name="app_name" translatable="false">Movie app</string>
    <string name="quoteText">Quote:</string>
    <string name="descriptionText">Description:</string>
    <string name="originalTitleText">Original title</string>
    <string name="originalLanguageText">Original language</string>
    <string name="budgetText">Budget</string>
    <string name="releaseDateText">Release date</string>
    <string name="statusText">Status</string>
    <string name="adultText">Adult</string>
    <string name="firstAirDateText">First air date</string>
    <string name="lastAirDateText">Last air date</string>
    <string name="typeText">Type</string>
    <string name="numberOfEpisodesText">Number of episodes</string>
    <string name="createdByText">Created by</string>
    <string name="numberOfSeasonsText">Number of seasons</string>
    <string name="actorsText">Actors</string>
    <string name="moviesText">Movies</string>
    <string name="tvShowsText">Tv shows</string>
    <string name="settingsText">Settings</string>
    <string name="themeText">Theme</string>
    <string name="lightModeText">Light mode</string>
    <string name="darkModeText">Dark mode</string>
    <string name="filterText">Filter</string>
    <string name="chooseMovieCategoryText">Choose movie category</string>
    <string name="topRated">Top rated</string>
    <string name="popularText">Popular</string>
    <string name="upcomingText">Upcoming</string>
    <string name="applyText">Apply</string>
    <string name="chooseTvShowCategoryText">Choose tv show category</string>
    <string name="onTheAir">On the air</string>
    <string name="searchText">Search</string>
    <string name="searchQueryInfoMessageText">Search query must contain one character!</string>
    <string name="imageNumberText" translatable="false">%d/%d</string>
    <string name="ratingText" translatable="false">%d/%d</string>
    <string name="themeHeaderText">Theme</string>
    <string name="languageHeaderText">Language</string>
    <string name="selectedThemeTitleText">Selected theme</string>
    <string name="languageTitleText">Translate data in your language</string>
    <string name="languageDescriptionText">This will display all data in your language when available</string>
    <string name="searchHintText">Search…</string>
    <string name="invalidUsernameText">Username cannot be empty!</string>
    <string name="invalidPasswordText">Password must contains >3 characters!</string>
    <string name="tmdbRatingText">TMDB rating</string>
    <string name="loginText">Login</string>
    <string name="cancelText">Cancel</string>
    <string name="rateText">Rate</string>
    <string name="successMessageText">Success</string>
    <string name="successfullyUpdatedRatingMessageText">Successfully updated rating</string>
    <string name="errorOccurredMessageText">An error occurred!!!</string>
    <string name="loginPopUpTitleMessageText">You need to be logged in to be able to rate!</string>
    <string name="usernameHintText">Username</string>
    <string name="passwordHintText">Password</string>
    <string name="loginButtonText">Login</string>
    <string name="skipLoginText">Skip login…</string>
    <string name="goToRegisterText">Not a member? Sign up now.</string>

    <string-array name="theme_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>System Default</item>
    </string-array>

    <string-array name="theme_values">
        <item>light</item>
        <item>dark</item>
        <item>system_default</item>
    </string-array>
</resources>